@@ -1,3 +1,7 @@
+2000-05-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* imagewin.cc, exult.cc: pressing Enter will toggle fullscreen
+	I don't get why SDL won't detect ALT though...
+
 2000-05-08  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* usecode.cc: avoided Internal Compiler Error for gcc 2.95.2
 	* README.win32: minor change for release 0.26
